--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AdminLTE"]
 	path = AdminLTE
 	url = https://github.com/almasaeed2010/AdminLTE.git
+[submodule "CakePHP"]
+	path = CakePHP
+	url = https://github.com/cakephp/cakephp.git
