--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CakePHP"]
 	path = CakePHP
 	url = https://github.com/cakephp/cakephp.git
+[submodule "app/Plugin/DebugKit"]
+	path = app/Plugin/DebugKit
+	url = git://github.com/cakephp/debug_kit.git
