--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "app/Plugin/DebugKit"]
 	path = app/Plugin/DebugKit
 	url = git://github.com/cakephp/debug_kit.git
+[submodule "app/Plugin/Users"]
+	path = app/Plugin/Users
+	url = git@github.com:CakeDC/users.git
