--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "app/Plugin/Users"]
 	path = app/Plugin/Users
 	url = git@github.com:CakeDC/users.git
+[submodule "app/Plugin/Utils"]
+	path = app/Plugin/Utils
+	url = https://github.com/CakeDC/utils.git
